--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "lint": "eslint 'src/**/*.ts'",
     "lint:fix": "eslint --fix 'src/**/*.ts'",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test:unit": "jest src/__tests__/unit",
+    "test:unit:watch": "jest src/__tests__/unit --watch",
+    "test:unit:coverage": "jest src/__tests__/unit --coverage",
+    "test:e2e": "jest src/__tests__/e2e",
+    "test:e2e:watch": "jest src/__tests__/e2e --watch",
     "release": "release-it"
   },
   "author": "Ricardo Ambrogi",
