--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "release": "release-it"
+    "release": "release-it",
+    "install": "npm run build"
   },
   "author": "Ricardo Ambrogi",
   "license": "MIT",
