--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
   "author": "Ricardo Ambrogi",
   "license": "MIT",
   "devDependencies": {
+  },
+  "dependencies": {
+    "https-proxy-agent": "5.0.1",
     "@types/jest": "27.5.0",
     "@types/nock": "11.1.0",
     "@typescript-eslint/eslint-plugin": "4.33.0",
@@ -55,9 +58,6 @@
     "ts-loader": "8.0.10",
     "ttypescript": "^1.5.10",
     "typescript": "4.7.3"
-  },
-  "dependencies": {
-    "https-proxy-agent": "5.0.1"
   },
   "optionalDependencies": {
     "@types/node": "14.0.9"
