--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "release": "release-it",
-    "install": "npm run build"
+    "prepare": "npm run build"
   },
   "author": "Ricardo Ambrogi",
   "license": "MIT",
